--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "react-responsive-masonry": "2.7.1",
     "react-router": "7.13.0",
     "react-router-dom": "^7.13.0",
+    "firebase": "10.12.4",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-slick": "0.31.0",
